// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <nav
    class="Navigation navbar-expand-lg navbar navbar-dark bg-secondary"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      Jobly
    </a>
    <ul
      class="ml-auto navbar-nav"
    >
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="/companies"
        >
          Companies
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="/jobs"
        >
          Jobs
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="/profile"
        >
          Profile
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="/"
        >
          Log out testfirst
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <nav
    class="Navigation navbar-expand-lg navbar navbar-dark bg-secondary"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      Jobly
    </a>
    <ul
      class="ml-auto navbar-nav"
    >
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="/login"
        >
          Login
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="/signup"
        >
          Sign Up
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
